This file documents the revision history for Perl extension Mojolicious.

2.81  2012-04-11
  - Improved documentation.
  - Improved tests.

2.80  2012-04-10
  - Added support for alternative MIME types to Mojolicious::Types.
  - Added endpoint method to Mojo::UserAgent::Transactor.
  - Improved tests.
  - Fixed HTTPS proxy keep alive bug in Mojo::UserAgent.

2.79  2012-04-10
  - Improved makefile and plugin generators to always use the latest
    Mojolicious version.
  - Improved documentation.
  - Improved tests.
  - Fixed HTTPS proxy support in Mojo::UserAgent.
  - Fixed multiple Mojo::UserAgent::Transactor bugs.

2.78  2012-04-09
  - Improved Mojolicious::Routes to allow redispatching controllers.
  - Improved Mojolicious::Routes logging.
  - Improved documentation.

2.77  2012-04-09
  - Improved Mojo::Transaction::WebSocket to allow custom message parsers.
  - Improved help command to be less strict.
  - Improved documentation. (tempire, sri)
  - Improved tests.
  - Fixed bug that prevented --help and -h flags from working for generator
    commands.
  - Fixed small bug that prevented non-string secrets in Mojolicious.

2.76  2012-04-05
  - Improved documentation.

2.75  2012-04-05
  - Improved documentation.
  - Improved tests.
  - Fixed small bug in Mojo::Parameters->params.

2.74  2012-04-04
  - Improved documentation.
  - Improved tests.
  - Fixed multiple small bugs in Mojo::UserAgent::Transactor->form.

2.73  2012-04-03
  - Improved documentation.
  - Improved tests.
  - Fixed multiple progress event bugs in Mojo::Message.

2.72  2012-04-03
  - Added kept_alive method to Mojo::Transaction::WebSocket.
  - Improved documentation.

2.71  2012-04-03
  - Improved Hypnotoad error handling.
  - Improved version command to detect proxy servers automatically.
  - Improved documentation.
  - Improved tests.
  - Fixed small argument bug in Mojo::Headers->to_hash.

2.70  2012-03-30
  - Improved speed of version command by switching to the MetaCPAN API.